<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".sunrise.SunriseActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/myToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:background="@color/my_primary"
        app:titleTextColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/latitude_label"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/latitude_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/latitude_input_text"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/latitude_input"
        app:layout_constraintTop_toBottomOf="@+id/myToolbar" />

    <EditText
        android:id="@+id/latitude_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/latitude_input_hint"
        android:digits="-.0123456789"
        android:inputType="number"
        android:textSize="20dp"
        android:textColor="@color/input"
        app:layout_constraintBottom_toTopOf="@+id/longitude_label"
        app:layout_constraintTop_toBottomOf="@+id/latitude_label" />

    <TextView
        android:id="@+id/longitude_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/longitude_input_text"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/longitude_input"
        app:layout_constraintTop_toBottomOf="@+id/latitude_input" />

    <EditText
        android:id="@+id/longitude_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:digits="-.0123456789"
        android:hint="@string/longitude_input_hint"
        android:inputType="number"
        android:textSize="20dp"
        android:textColor="@color/input"
        app:layout_constraintTop_toBottomOf="@+id/longitude_label" />

    <Button
        android:id="@+id/lookup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/lookup_text"
        android:textSize="20dp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/view_favorite_locations_button" />

    <Button
        android:id="@+id/view_favorite_locations_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/view_favorite_locations_text"
        android:textSize="20dp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>