...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sunrise.LocationActivity">

    <TextView
        android:id="@+id/time_zone_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/time_zone_hint"
        android:textColor="#0009FF"
        android:textSize="20dp"
...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/save_location_text"
        app:cornerRadius="0dp"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/back_button" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
...
