<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_clear"
        android:title="@string/clear"
        android:icon="@drawable/clear"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_help"
        android:title="@string/about"
        android:icon="@drawable/about"
        app:showAsAction="never" />

</menu>