<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sunrise.FavoriteLocationList">

    <TextView
        android:id="@+id/favourite_locations_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:background="@color/my_primary"
        android:text="@string/favourite_locations_list"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="#FFFFFFFF"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toTopOf="@+id/goBack"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.70"
        app:layout_constraintTop_toBottomOf="@+id/favourite_locations_list"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/goBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/back_text"
        android:textSize="18dp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>